--- a/iConfs-iOS/MainStoryboard.storyboard
+++ b/iConfs-iOS/MainStoryboard.storyboard
@@ -63,7 +63,36 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q86-Wv-zlY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="107" y="-78"/>
+            <point key="canvasLocation" x="-69" y="-230"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="pVE-Ny-Uf6">
+            <objects>
+                <viewController id="qBv-ti-Psr" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9pe-7h-TRE">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="bpu-1F-FdQ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="S0M-QI-1zM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="976" y="-938"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="4DT-vZ-4jt">
+            <objects>
+                <viewController id="xGX-Ur-ny3" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9Ia-ug-5qv">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FBy-6u-6nX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1434" y="-930"/>
         </scene>
         <!--Home View Controller - HomePageIConfs-->
         <scene sceneID="IgL-MN-Lgp">
@@ -90,9 +119,13 @@
                                 </constraints>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jjm-gF-B4D">
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Organization">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jjm-gF-B4D">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="53" id="AgE-Bw-zsS"/>
+                                    <constraint firstAttribute="height" constant="56" id="gtD-Ku-O5E"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
+                                <state key="normal" image="Organization.jpg">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -104,7 +137,11 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MhJ-BT-VIX">
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="73" id="6Mw-xq-1y4"/>
+                                    <constraint firstAttribute="height" constant="73" id="jOY-yW-bmH"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
                                 <state key="normal" title="Notifications">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -118,9 +155,10 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UFn-7s-Y4L">
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="105" id="Her-bz-dBq"/>
+                                    <constraint firstAttribute="height" constant="72" id="OqP-E6-fLk"/>
+                                    <constraint firstAttribute="width" constant="73" id="aCb-sj-4dM"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
                                 <state key="normal" title="Networking">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -136,23 +174,23 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="OGL-9d-R5S" firstAttribute="leading" secondItem="qAQ-Vj-hDn" secondAttribute="leading" type="default" id="B2P-rM-dJC"/>
-                            <constraint firstAttribute="bottom" secondItem="Jjm-gF-B4D" secondAttribute="bottom" constant="27" id="Qv6-kW-NhR"/>
+                            <constraint firstItem="Jjm-gF-B4D" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" constant="97" id="E99-UT-G1N"/>
+                            <constraint firstItem="UFn-7s-Y4L" firstAttribute="leading" secondItem="qAQ-Vj-hDn" secondAttribute="leading" constant="41" id="HjY-ZJ-hrh"/>
+                            <constraint firstItem="UFn-7s-Y4L" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" constant="185" id="NAB-2M-ebs"/>
+                            <constraint firstItem="Jjm-gF-B4D" firstAttribute="leading" secondItem="qAQ-Vj-hDn" secondAttribute="leading" constant="46" id="PwO-hv-dtB"/>
                             <constraint firstItem="yCg-gF-EnB" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" type="default" id="RJd-fd-ukW"/>
-                            <constraint firstAttribute="trailing" secondItem="MhJ-BT-VIX" secondAttribute="trailing" constant="45" id="RjV-aY-ilf"/>
                             <constraint firstAttribute="trailing" secondItem="yCg-gF-EnB" secondAttribute="trailing" constant="8" id="cLV-Ma-zMA"/>
-                            <constraint firstItem="Jjm-gF-B4D" firstAttribute="leading" secondItem="UFn-7s-Y4L" secondAttribute="leading" type="default" id="dAm-59-Qj9"/>
                             <constraint firstItem="OGL-9d-R5S" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" type="default" id="dfC-tO-Hdv"/>
-                            <constraint firstItem="MhJ-BT-VIX" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" constant="209" id="gku-DX-Crv"/>
+                            <constraint firstItem="MhJ-BT-VIX" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" constant="88" id="fLq-F8-fZS"/>
                             <constraint firstItem="OGL-9d-R5S" firstAttribute="trailing" secondItem="qAQ-Vj-hDn" secondAttribute="trailing" type="default" id="kFW-vP-fFJ"/>
-                            <constraint firstAttribute="bottom" secondItem="UFn-7s-Y4L" secondAttribute="bottom" constant="227" id="n6S-BX-kgh"/>
-                            <constraint firstAttribute="trailing" secondItem="Jjm-gF-B4D" secondAttribute="trailing" constant="28" id="vHG-9z-3RV"/>
+                            <constraint firstAttribute="trailing" secondItem="MhJ-BT-VIX" secondAttribute="trailing" constant="50" id="lJ9-GY-Zmt"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="IIK-dc-mJ7"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QdX-JP-ijD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="840" y="67"/>
+            <point key="canvasLocation" x="472" y="-221"/>
         </scene>
         <!--Networking Table View Controller-->
         <scene sceneID="25T-xN-DZr">
@@ -162,6 +200,17 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <segmentedControl key="tableFooterView" opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" id="4Yj-hg-ddX">
+                            <rect key="frame" x="0.0" y="66" width="320" height="44"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <segments>
+                                <segment title="My interests"/>
+                                <segment title="All"/>
+                            </segments>
+                            <connections>
+                                <action selector="changeToAllOrPref:" destination="ei1-3G-pZP" eventType="valueChanged" id="Cev-wF-0Er"/>
+                            </connections>
+                        </segmentedControl>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="d5k-WA-yBD">
                                 <rect key="frame" x="0.0" y="22" width="320" height="44"/>
@@ -188,10 +237,13 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="prefOrAllButton" destination="4Yj-hg-ddX" id="0Vl-6l-F1q"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rsZ-M1-5Ls" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1344" y="-875"/>
+            <point key="canvasLocation" x="2704" y="-19"/>
         </scene>
         <!--Networking View Controller-->
         <scene sceneID="Nyx-sv-VA1">
@@ -261,7 +313,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hqB-Du-eUA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1807" y="-875"/>
+            <point key="canvasLocation" x="3167" y="-19"/>
         </scene>
         <!--Person Profile View Controller-->
         <scene sceneID="NXm-ed-Vsx">
@@ -289,7 +341,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XHD-To-YFF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2328" y="-883"/>
+            <point key="canvasLocation" x="3688" y="-27"/>
         </scene>
         <!--Notification Table View Controller-->
         <scene sceneID="PlN-f5-YwT">
@@ -472,7 +524,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eEq-FH-buG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1708" y="-61"/>
+            <point key="canvasLocation" x="3068" y="795"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="vrk-B4-Ued">
@@ -508,9 +560,30 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="h3Y-IX-87M" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="850" y="-875"/>
+            <point key="canvasLocation" x="2210" y="-19"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="LRF-Xc-bsB">
+            <objects>
+                <navigationController id="yGN-Jh-vfb" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="pUi-0l-H0B">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="qBv-ti-Psr" kind="relationship" relationship="rootViewController" id="Z9V-cd-HvF"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sVZ-sx-D86" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="450" y="-938"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Organization.jpg" width="50" height="50"/>
+    </resources>
     <classes>
         <class className="CommunicationViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/CommunicationViewController.h"/>
@@ -543,7 +616,9 @@
         <class className="NetworkingTableViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NetworkingTableViewController.h"/>
             <relationships>
+                <relationship kind="action" name="changeToAllOrPref:" candidateClass="UISegmentedControl"/>
                 <relationship kind="action" name="goHome:" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="prefOrAllButton" candidateClass="UISegmentedControl"/>
             </relationships>
         </class>
         <class className="NetworkingViewController" superclassName="UIViewController">
