--- a/iConfs-iOS/MainStoryboard.storyboard
+++ b/iConfs-iOS/MainStoryboard.storyboard
@@ -65,10 +65,10 @@
             </objects>
             <point key="canvasLocation" x="-69" y="-230"/>
         </scene>
-        <!--View Controller-->
+        <!--Program View Controller-->
         <scene sceneID="pVE-Ny-Uf6">
             <objects>
-                <viewController id="qBv-ti-Psr" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ProgramViewController" id="qBv-ti-Psr" customClass="ProgramViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9pe-7h-TRE">
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -119,14 +119,14 @@
                                 </constraints>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jjm-gF-B4D">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jjm-gF-B4D">
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="53" id="AgE-Bw-zsS"/>
-                                    <constraint firstAttribute="height" constant="56" id="gtD-Ku-O5E"/>
+                                    <constraint firstAttribute="width" constant="73" id="Whc-MF-dbX"/>
+                                    <constraint firstAttribute="height" constant="72" id="mZM-wf-i8H"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
+                                <fontDescription key="fontDescription" type="boldSystem" size="button"/>
                                 <state key="normal" image="Organization.jpg">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <state key="highlighted">
@@ -170,20 +170,37 @@
                                     <segue destination="Tzd-UH-xKH" kind="modal" id="ObN-5k-8Hz"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nSP-t5-Er5">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" image="Schedule.jpg">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="yGN-Jh-vfb" kind="modal" id="Fhv-h5-NBu"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="MhJ-BT-VIX" firstAttribute="leading" secondItem="yCg-gF-EnB" secondAttribute="leading" type="default" id="6Vz-2D-d56"/>
+                            <constraint firstItem="MhJ-BT-VIX" firstAttribute="leading" secondItem="nSP-t5-Er5" secondAttribute="leading" type="default" id="AdP-M7-Yek"/>
                             <constraint firstItem="OGL-9d-R5S" firstAttribute="leading" secondItem="qAQ-Vj-hDn" secondAttribute="leading" type="default" id="B2P-rM-dJC"/>
-                            <constraint firstItem="Jjm-gF-B4D" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" constant="97" id="E99-UT-G1N"/>
                             <constraint firstItem="UFn-7s-Y4L" firstAttribute="leading" secondItem="qAQ-Vj-hDn" secondAttribute="leading" constant="41" id="HjY-ZJ-hrh"/>
                             <constraint firstItem="UFn-7s-Y4L" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" constant="185" id="NAB-2M-ebs"/>
+                            <constraint firstItem="MhJ-BT-VIX" firstAttribute="trailing" secondItem="nSP-t5-Er5" secondAttribute="trailing" type="default" id="Nnz-9B-V3y"/>
                             <constraint firstItem="Jjm-gF-B4D" firstAttribute="leading" secondItem="qAQ-Vj-hDn" secondAttribute="leading" constant="46" id="PwO-hv-dtB"/>
                             <constraint firstItem="yCg-gF-EnB" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" type="default" id="RJd-fd-ukW"/>
+                            <constraint firstItem="MhJ-BT-VIX" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" constant="98" id="SoI-kA-ham"/>
+                            <constraint firstItem="nSP-t5-Er5" firstAttribute="bottom" secondItem="UFn-7s-Y4L" secondAttribute="bottom" type="default" id="ZUl-2d-5XH"/>
                             <constraint firstAttribute="trailing" secondItem="yCg-gF-EnB" secondAttribute="trailing" constant="8" id="cLV-Ma-zMA"/>
                             <constraint firstItem="OGL-9d-R5S" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" type="default" id="dfC-tO-Hdv"/>
-                            <constraint firstItem="MhJ-BT-VIX" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" constant="88" id="fLq-F8-fZS"/>
+                            <constraint firstItem="Jjm-gF-B4D" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" constant="97" id="ffw-A3-cAw"/>
                             <constraint firstItem="OGL-9d-R5S" firstAttribute="trailing" secondItem="qAQ-Vj-hDn" secondAttribute="trailing" type="default" id="kFW-vP-fFJ"/>
-                            <constraint firstAttribute="trailing" secondItem="MhJ-BT-VIX" secondAttribute="trailing" constant="50" id="lJ9-GY-Zmt"/>
+                            <constraint firstItem="nSP-t5-Er5" firstAttribute="top" secondItem="UFn-7s-Y4L" secondAttribute="top" type="default" id="wEO-Wh-fXS"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="IIK-dc-mJ7"/>
@@ -583,7 +600,77 @@
     </scenes>
     <resources>
         <image name="Organization.jpg" width="50" height="50"/>
+        <image name="Schedule.jpg" width="50" height="50"/>
     </resources>
+    <classes>
+        <class className="CommunicationViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CommunicationViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="clearButton:" candidateClass="UIButton"/>
+                <relationship kind="action" name="feedbackOrMessageButton:" candidateClass="UISegmentedControl"/>
+                <relationship kind="action" name="sendButton:"/>
+                <relationship kind="outlet" name="emailField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="feedback" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="HomeViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/HomeViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="networkingButton:" candidateClass="UIButton"/>
+                <relationship kind="action" name="updateButton:" candidateClass="UIBarButtonItem"/>
+            </relationships>
+        </class>
+        <class className="IConfsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/IConfsViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="loginButton:" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="emailField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="passwordField" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="NetworkingTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NetworkingTableViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="changeToAllOrPref:" candidateClass="UISegmentedControl"/>
+                <relationship kind="action" name="goHome:" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="prefOrAllButton" candidateClass="UISegmentedControl"/>
+            </relationships>
+        </class>
+        <class className="NetworkingViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NetworkingViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="networkingDescription" candidateClass="UITextView"/>
+                <relationship kind="outlet" name="networkingTitle" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="personName" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="personPhoto" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+        <class className="NotificationTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NotificationTableViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="goHome:" candidateClass="UIBarButtonItem"/>
+            </relationships>
+        </class>
+        <class className="NotificationViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NotificationViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="notificationDate" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="notificationText" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="PersonProfileViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PersonProfileViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="goBack:" candidateClass="UIBarButtonItem"/>
+            </relationships>
+        </class>
+        <class className="ProgramViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ProgramViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
