--- a/iConfs-iOS/MainStoryboard.storyboard
+++ b/iConfs-iOS/MainStoryboard.storyboard
@@ -65,16 +65,22 @@
             </objects>
             <point key="canvasLocation" x="-69" y="-230"/>
         </scene>
-        <!--Program View Controller-->
+        <!--Personal ProgramTK Calendar Day View Controller-->
         <scene sceneID="pVE-Ny-Uf6">
             <objects>
-                <viewController storyboardIdentifier="ProgramViewController" id="qBv-ti-Psr" customClass="ProgramViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PersonalProgramTKCalendarDayViewController" id="qBv-ti-Psr" customClass="PersonalProgramTKCalendarDayViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9pe-7h-TRE">
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="bpu-1F-FdQ"/>
+                    <navigationItem key="navigationItem" id="bpu-1F-FdQ">
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="sry-LI-rrw">
+                            <connections>
+                                <action selector="goHome:" destination="qBv-ti-Psr" id="UGm-17-WsB"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S0M-QI-1zM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -602,75 +608,6 @@
         <image name="Organization.jpg" width="50" height="50"/>
         <image name="Schedule.jpg" width="50" height="50"/>
     </resources>
-    <classes>
-        <class className="CommunicationViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/CommunicationViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="clearButton:" candidateClass="UIButton"/>
-                <relationship kind="action" name="feedbackOrMessageButton:" candidateClass="UISegmentedControl"/>
-                <relationship kind="action" name="sendButton:"/>
-                <relationship kind="outlet" name="emailField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="feedback" candidateClass="UITextView"/>
-            </relationships>
-        </class>
-        <class className="HomeViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/HomeViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="networkingButton:" candidateClass="UIButton"/>
-                <relationship kind="action" name="updateButton:" candidateClass="UIBarButtonItem"/>
-            </relationships>
-        </class>
-        <class className="IConfsViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/IConfsViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="loginButton:" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="emailField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="passwordField" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="NetworkingTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NetworkingTableViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="changeToAllOrPref:" candidateClass="UISegmentedControl"/>
-                <relationship kind="action" name="goHome:" candidateClass="UIBarButtonItem"/>
-                <relationship kind="outlet" name="prefOrAllButton" candidateClass="UISegmentedControl"/>
-            </relationships>
-        </class>
-        <class className="NetworkingViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NetworkingViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="networkingDescription" candidateClass="UITextView"/>
-                <relationship kind="outlet" name="networkingTitle" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="personName" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="personPhoto" candidateClass="UIImageView"/>
-            </relationships>
-        </class>
-        <class className="NotificationTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NotificationTableViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="goHome:" candidateClass="UIBarButtonItem"/>
-            </relationships>
-        </class>
-        <class className="NotificationViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NotificationViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="notificationDate" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="notificationText" candidateClass="UITextView"/>
-            </relationships>
-        </class>
-        <class className="PersonProfileViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/PersonProfileViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="goBack:" candidateClass="UIBarButtonItem"/>
-            </relationships>
-        </class>
-        <class className="ProgramViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ProgramViewController.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
